# turtle_trading

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  app.py  crontab  docker-compose.yaml  entrypoint.sh  pyproject.toml  requirements.txt
.claude/: settings.json
.github/: pull_request_template.md
artifacts/: task-1.2.1-notifier-audit.json  task-1.2.3-precheck.md  trading-milestone-review-rubric.md  v3.2.1-deployment-handoff.md  v3.2.1-phase1-council-review.md  v3.2.1-rollback-procedure.md
config/: correlation_groups.yaml  notifications.yaml.example  ohlcv_collection.yaml  system_status.yaml  universe.yaml
docs/: operations-guide.md  roadmap.md
logs/: phase1-task1.2.2-kr-duplication.md
pages/: __init__.py  backtest.py  chart_analysis.py  dashboard.py  performance.py  risk.py  signals.py  trades.py
scripts/: README.md  auto_trade.py  backup_data.sh  check_overfitting.py  check_positions.py  check_risk_limits.py  cleanup_old_data.py  collect_daily_ohlcv.py  daily_report.py  deploy-v3.2.1.sh  fetch_universe_charts.py  go_live_check.py  health_check.py  list_positions.py  market_intelligence.py  monitor_positions.py  monthly_report.py  paper_trade_report.py  performance_review.py  run_backtest.py  security_check.py  signal_check.py  sync_positions.py  sync_to_obsidian.sh  test_notifications.py  toggle_trading.py  validate_data.py  weekly_charts.sh  weekly_report.py
src/: __init__.py  analytics.py  auto_trader.py  backtester.py  chart_generator.py  commission.py  cost_analyzer.py  data_fetcher.py  data_store.py  indicators.py  inverse_filter.py  kill_switch.py  kis_api.py  local_chart_renderer.py  market_breadth.py  market_calendar.py  monitor_state.py  multi_currency_backtester.py  notifier.py  paper_trader.py  position_sizer.py  position_sync.py  position_tracker.py  pyramid_manager.py  regime_detector.py  risk_manager.py  screener.py  script_helpers.py  security.py  spot_price.py  trading_guard.py  trend_filter.py  types.py  universe_manager.py  utils.py  vi_cb_detector.py
tests/: conftest.py  test_analytics.py  test_app.py  test_auto_trader.py  test_auto_trader_integration.py  test_backtester.py  test_backtester_live_equivalence.py  test_chart_generator.py  test_check_overfitting.py  test_check_positions.py  test_check_positions_anomaly.py  test_collect_daily_ohlcv.py  test_commission.py  test_cost_analyzer.py  test_daily_report.py  test_data_fetcher.py  test_data_store.py  test_go_live_check.py  test_health_check.py  test_indicators.py  test_inverse_filter.py  test_kill_switch.py  test_kis_api.py  test_local_chart_renderer.py  test_market_breadth.py  test_market_calendar.py  (+29 more)
(+24 files in other folders)
